--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,34 @@
+html{
+    
+}
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
     
 }
-#base{
-    
+
+#title{
+    width: 600px;
+    height: 170px;
+    background-color: beige;
+    margin: 0px auto;
+    border-radius: 5px;
 }
-#page{}
+
+h3{
+    text-align: center;
+    padding-top: 25px;
+    margin: 10px;
+    font-size: 40px;
+    color: rgb(159, 140, 118);
+   
+}
+h5{
+    text-align: center;
+    font-size: 25px;
+    color: rgb(159, 140, 118);
+    margin: 30px;
+}
