--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
-html{
-    
-}
 body{
     background-color: white;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-   
-    
+    box-sizing: border-box;   
+    text-align: center;
 }
 
 #title{
@@ -16,6 +12,7 @@ body{
     background-color: beige;
     margin: 0px auto;
     border-radius: 5px;
+   
 }
 
 h3{
@@ -31,4 +28,15 @@ h5{
     font-size: 25px;
     color: rgb(159, 140, 118);
     margin: 30px;
+    
+}
+a{
+    margin: 7px;
+    margin-top: 10px;
+    text-align: center;
+    display: inline-block;
+    text-decoration-style: dotted;
+    color: rgb(113, 113, 113);
+    
+  
 }
