--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;   
+
     
     
     
@@ -10,7 +11,7 @@ body{
 
 #titlebox{
     width: 600px;
-    height: 170px;
+    height: 150px;
     background-color: beige;
     margin: 0px auto;
     border-radius: 5px;
@@ -21,7 +22,7 @@ body{
 #Title{
     text-align: center;
     padding-top: 25px;
-    margin: 10px;
+    margin: 5px;
     font-size: 40px;
     color: rgb(159, 140, 118);
   
@@ -60,7 +61,7 @@ a{
 }
 #info{
     border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+   
     width: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -68,5 +69,7 @@ a{
 }
 #text{    
     margin-left: 435px;
+    width: 600px;
+    border-bottom: 1px solid lightgray;
 
 }
